--- a/views/adminLayouts/navbar.ejs
+++ b/views/adminLayouts/navbar.ejs
@@ -3,7 +3,7 @@
     <aside class="navbar-aside" id="offcanvas_aside">
         <div class="aside-top">
             <a href="/admin/adminhome" class="brand-wrap ">
-                <img src="/admin/imgs/theme/logo.svg" class="logo" alt="Evara Dashboard">
+                <img src="/admin/imgs/theme/logo.png" class="logo" alt="Threadloom Dashboard">
             </a>
             <div>
                 <button class="btn btn-icon btn-aside-minimize"> <i class="text-muted material-icons md-menu_open"></i> </button>
