--- a/views/layouts/footer.ejs
+++ b/views/layouts/footer.ejs
@@ -30,7 +30,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="widget-about font-md mb-md-5 mb-lg-0">
                         <div class="logo logo-width-1 wow fadeIn animated">
-                            <a href="index.html"><img src="/imgs/theme/logo.svg" alt="logo"></a>
+                            <a href="/"><img src="/imgs/theme/logo.jpg" alt="logo"></a>
                         </div>
                         <h5 class="mt-20 mb-10 fw-600 text-grey-4 wow fadeIn animated">Contact</h5>
                         <p class="wow fadeIn animated">
