--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -58,7 +58,7 @@
         <div class="container">
             <div class="header-wrap">
                 <div class="logo logo-width-1">
-                    <a href=""><img src="/imgs/theme/logo.svg" alt="logo"></a>
+                    <a href="/"><img src="/imgs/theme/logo.jpg" alt="logo"></a>
                 </div>
                 <div class="header-right">
                     <div class="search-style-2">
@@ -133,7 +133,7 @@
         <div class="container">
             <div class="header-wrap header-space-between position-relative  main-nav">
                 <div class="logo logo-width-1 d-block d-lg-none">
-                    <a href="index.html"><img src="/imgs/theme/logo.svg" alt="logo"></a>
+                    <a href="/"><img src="/imgs/theme/logo.jpg" alt="logo"></a>
                 </div>
                 <div class="header-nav d-none d-lg-flex">
                     <div class="main-categori-wrap d-none d-lg-block">
@@ -444,7 +444,7 @@
     <div class="mobile-header-wrapper-inner">
         <div class="mobile-header-top">
             <div class="mobile-header-logo">
-                <a href=""><img src="/imgs/theme/logo.svg" alt="logo"></a>
+                <a href="/"><img src="/imgs/theme/logo.jpg" alt="logo"></a>
             </div>
             <div class="mobile-menu-close close-style-wrap close-style-position-inherit">
                 <button class="close-style search-close">
