--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5551,13 +5551,21 @@ h6.post-title {
 .logo a {
     display: block;
 }
-
+.logo a img {
+    filter: brightness(100%);
+    transform: scale(1.1);
+    transition: transform 0.3s ease;
+}
+.logo a:hover img {
+    transform: scale(1.3); 
+}
 .logo.logo-width-1 {
     margin-right: 123px;
+
 }
 
 .logo.logo-width-1 a img {
-    width: 120px;
+    width: 150px;
     min-width: 120px;
 }
 
