--- a/views/adminLayouts/header.ejs
+++ b/views/adminLayouts/header.ejs
@@ -13,7 +13,7 @@
     <meta property="og:url" content="">
     <meta property="og:image" content="">
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="/admin/imgs/theme/favicon.svg">
+    <link rel="shortcut icon" type="image/x-icon" href="/admin/imgs/theme/favicon.jpg">
     <!-- Template CSS -->
     <link href="/admin/css/main.css" rel="stylesheet" type="text/css" />
 </head>
