--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -117,7 +117,7 @@
                 <!-- this for product-->
                 <section class="product-tabs section-padding wow fadeIn animated">
                     <div class="container">
-                        <div class="tab-header">
+                        <div class="tab-header d-flex flex-wrap justify-content-between align-items-center">
                             <ul class="nav nav-tabs" id="myTab" role="tablist">
                                 <li class="nav-item" role="presentation">
                                     <button class="nav-link active" id="nav-tab-one" data-bs-toggle="tab"
@@ -135,7 +135,7 @@
                                         aria-selected="false">New added</button>
                                 </li>
                             </ul>
-                            <a href="#" class="view-more d-none d-md-flex">View More<i
+                            <a href="#" class="view-more mt-2 mt-md-0  d-flex">View More<i
                                     class="fi-rs-angle-double-small-right"></i></a>
                         </div>
                         <!--End nav-tabs-->
