--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -47,7 +47,7 @@
                                                     <label class="form-check-label" for="exampleCheckbox1"><span>Remember me</span></label>
                                                 </div>
                                             </div> 
-                                                    <a class="text-muted" href="#">Forgot password?</a>
+                                                    <a class="text-muted" href="/forgotPassword">Forgot password?</a>
                                                 </div>
                                                 <div class="form-group text-center">
                                                     <button type="submit"
