forgot password chaged

--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -42,7 +42,7 @@
                                         <a href="/dashboard">Dashboard</a>
                                     </li>
                                     <li>
-                                        <form method="post" action="/logout">
+                                        <form method="POST" action="/logout">
                                             <button type="submit">Logout</button>
                                         </form>
                                     </li>
@@ -482,7 +482,7 @@
                 <nav>
                     <ul class="mobile-menu">
                         <li class="menu-item-has-children"><span class="menu-expand"></span><a
-                                href="index.html">Home</a> </li>
+                                href="/">Home</a> </li>
 
                         <li class="menu-item-has-children"><span class="menu-expand"></span><a href="/shop">Shop</a>
                             <ul class="dropdown">
@@ -572,7 +572,7 @@
 
                         <a href="/dashboard"><i class="fi-rs-user"></i> Dashboard</a>
                         <br>
-                        <form method="post" action="/logout">
+                        <form method="POST" action="/logout">
                             <button type="submit">Logout</button>
                         </form>
                         <% } %>
