--- a/views/user/register.ejs
+++ b/views/user/register.ejs
@@ -78,13 +78,13 @@
                                             <div class="divider-text-center mt-15 mb-15">
                                                 <span> or</span>
                                             </div>
-                                            <!-- <ul class="btn-login list_none text-center mb-15">
+                                            <ul class="btn-login list_none text-center mb-15">
                                                 <li><a href="#"
                                                         class="btn btn-facebook hover-up mb-lg-3 mb-sm-4 rounded-pill">Sign
                                                         Up With Facebook</a></li>
                                                 <li><a href="/google" class="btn btn-google hover-up rounded-pill">Sign Up
                                                         With Google</a></li>
-                                            </ul> -->
+                                            </ul>
                                             <div class="text-muted text-center">Already have an account? <a
                                                     href="/login">Sign in now</a></div>
                                         </div>
