--- a/views/user/shop.ejs
+++ b/views/user/shop.ejs
@@ -124,7 +124,7 @@
                                             </div>
                                         </div>
                                     </div> -->
-                                    <div class="list-group">
+                                    <!-- <div class="list-group">
                                         <div class="list-group-item mb-10 mt-10">
                                             <hr class="sidebar-divider">
                                             <label class="fw-900">Size</label>
@@ -159,7 +159,7 @@
                                         <a href="#" class="btn-sm btn-default" id="applyFilterBtn">
                                             <span><i class="fi-rs-filter"></i>Filter</span>
                                         </a>
-                                    </div>
+                                    </div> -->
 
                                 </div>
                             </div>
