Added image and edit pages

--- a/views/layouts/footer.ejs
+++ b/views/layouts/footer.ejs
@@ -9,7 +9,8 @@
                             <h4 class="font-size-20 mb-0 ml-3">Sign up to Earn Referral Rewards</h4>
                         </div>
                         <div class="col my-4 my-md-0 des">
-                            <h5 class="font-size-15 ml-4 mb-0">...and receive <strong>₹150 for every referral.</strong></h5>
+                            <h5 class="font-size-15 ml-4 mb-0">...and receive <strong>₹100 for every referral.</strong>
+                            </h5>
                         </div>
                     </div>
                 </div>
@@ -34,13 +35,18 @@
                         </div>
                         <h5 class="mt-20 mb-10 fw-600 text-grey-4 wow fadeIn animated">Contact</h5>
                         <p class="wow fadeIn animated">
-                            <strong>Address: </strong>562 Wellington Road, Street 32, San Francisco
+                            <strong>Address: </strong>Near Kondotty,
+                            Malappuram (Dt),
+                            <br> Kerala(St),
+                            India </br>
+
+
                         </p>
                         <p class="wow fadeIn animated">
-                            <strong>Phone: </strong>+01 2222 365 /(+91) 01 2345 6789
+                            <strong>Phone: </strong>+91 9633351499
                         </p>
                         <p class="wow fadeIn animated">
-                            <strong>Hours: </strong>10:00 - 18:00, Mon - Sat
+                            <strong>Hours: </strong>8:00 - 20:00, Mon - Sat
                         </p>
                         <h5 class="mb-10 mt-30 fw-600 text-grey-4 wow fadeIn animated">Follow Us</h5>
                         <div class="mobile-social-icon wow fadeIn animated mb-sm-5 mb-md-0">
@@ -71,23 +77,17 @@
                         <li><a href="/wishList">My Wishlist</a></li>
                         <li><a href="/dashboard">Dashboard</a></li>
                         <li><a href="#">Help</a></li>
-                       
+
                     </ul>
                 </div>
                 <div class="col-lg-4">
                     <h5 class="widget-title wow fadeIn animated">Install App</h5>
-                    <div class="row">
-                        <div class="col-md-8 col-lg-12">
-                            <p class="wow fadeIn animated">From App Store or Google Play</p>
-                            <div class="download-app wow fadeIn animated">
-                                <a href="#" class="hover-up mb-sm-4 mb-lg-0"><img class="active" src="/imgs/theme/app-store.jpg" alt=""></a>
-                                <a href="#" class="hover-up"><img src="/imgs/theme/google-play.jpg" alt=""></a>
-                            </div>
-                        </div>
-                        <div class="col-md-4 col-lg-12 mt-md-3 mt-lg-0">
-                            <p class="mb-20 wow fadeIn animated">Secured Payment Gateways</p>
-                            <img class="wow fadeIn animated" src="/imgs/theme/payment-method.png" alt="">
-                        </div>
+
+                    <div class="col-md-4 col-lg-12 mt-md-3 mt-lg-0">
+                        <p class="mb-20 wow fadeIn animated">Secured Payment Gateways:</p>
+                        <p class="mb-20 wow fadeIn animated">Paypall</p>
+                        <p class="mb-20 wow fadeIn animated">Wallet</p>
+                        <img class="wow fadeIn animated" src="/imgs/theme/payment-method.png" alt="">
                     </div>
                 </div>
             </div>
@@ -99,15 +99,17 @@
                 <div class="footer-bottom"></div>
             </div>
             <div class="col-lg-6">
-                <p class="float-md-left font-sm text-muted mb-0">&copy; 2024, <strong class="text-brand">Threadloom</strong>  </p>
+                <p class="float-md-left font-sm text-muted mb-0">&copy; 2024, <strong
+                        class="text-brand">Threadloom</strong> </p>
             </div>
             <div class="col-lg-6">
                 <p class="text-lg-end text-start font-sm text-muted mb-0">
-                  All rights reserved
+                    All rights reserved
                 </p>
             </div>
         </div>
     </div>
 </footer>
 </body>
+
 </html>
