--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -1,76 +1,111 @@
 <%- include('../layouts/header.ejs') %>
     <%- include('../layouts/navbar.ejs') %>
-    <%- include('../layouts/preloader.ejs') %>
+        <%- include('../layouts/preloader.ejs') %>
+            <style>
+                .btn-login i {
+                    margin-left: 10px;
+                }
 
-        <main class="main">
-            <div class="page-header breadcrumb-wrap">
-                <div class="container">
-                    <div class="breadcrumb">
-                        <a href="/" rel="nofollow">Home</a>
-                        <span></span> <%= pageTitle %>
-                    </div>
-                </div>
-            </div>
-            
-            <section class="pt-150 pb-150">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-10 m-auto">
-                            <div class="row">
-                                <div class="col-lg-5 m-auto">
-                                    <div
-                                        class="login_wrap widget-taber-content p-30 background-white border-radius-20 mb-md-5 mb-lg-0 mb-sm-5">
-                                        <div class="padding_eight_all bg-white">
-                                            <div class="heading_s1">
-                                                <h3 class="mb-30">Login</h3>
-                                            </div>
-                                            <form method="post" action="/login" id="loginForm">
-                                                <div class="form-group">
-                                                    <input type="text" name="email" placeholder="Enter Your Email">
-                                                </div>
-                                                <div class="form-group">
-                                                <div class="error-message" id="emailError"></div> 
-                                                </div>
-                                                <div class="form-group">
-                                                    <input type="password" name="password" placeholder="Enter Password">
-                                                    <i class="fas fa-eye toggle-password"></i>
-                                                </div>
-
-                                                <div class="form-group">
-                                                    <div class="error-message" id="passwordError"></div> 
-                                                    </div>
-                                           
-
-                                                <div class="login_footer form-group">
-                                                   <div class="chek-form">
-                                                <div class="custome-checkbox">
-                                                    <input class="form-check-input" type="checkbox" name="checkbox" id="exampleCheckbox1" checked="">
-                                                    <label class="form-check-label" for="exampleCheckbox1"><span>Remember me</span></label>
-                                                </div>
-                                            </div> 
-                                                    <a class="text-muted" href="/forgotPassword">Forgot password?</a>
-                                                </div>
-                                                <div class="form-group text-center">
-                                                    <button type="submit"
-                                                        class="btn btn-fill-out btn-block hover-up rounded-pill"
-                                                        name="login">Log in</button>
-                                                </div>
-                                            </form>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                .btn i {
+                    margin-left: 10px;
+                }
+            </style>
+            <main class="main">
+                <div class="page-header breadcrumb-wrap">
+                    <div class="container">
+                        <div class="breadcrumb">
+                            <a href="/" rel="nofollow">Home</a>
+                            <span></span>
+                            <%= pageTitle %>
                         </div>
                     </div>
                 </div>
-            </section>
-        </main>
-        <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js"integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8=" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.7/axios.min.js"integrity="sha512-NQfB/bDaB8kaSXF8E77JjhHG5PM6XVRxvHzkZiwl3ddWCEPBa23T76MuWSwAJdMGJnmQqM0VeY9kFszsrBEFrQ=="crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-                <!-- Include SweetAlert -->
-        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-        <script src="/js/loginForm.js"></script>
-        
-      
-        <%- include('../layouts/footer.ejs') %>
+
+                <section class="pt-100 pb-100">
+                    <div class="container">
+                        <div class="row">
+                            <!-- Login Form Column -->
+                            <div class="col-lg-6 col-md-6 col-sm-12 ">
+                                <div
+                                    class="login_wrap widget-taber-content p-30 background-white border-radius-20 mb-md-5 mb-lg-0 mb-sm-5">
+                                    <div class="padding_eight_all bg-white">
+                                        <div class="heading_s1">
+                                            <h3 class="mb-30">Login</h3>
+                                        </div>
+                                        <form method="post" action="/login" id="loginForm">
+                                            <div class="form-group">
+                                                <input type="text" name="email" placeholder="Enter Your Email">
+                                            </div>
+                                            <div class="form-group">
+                                                <div class="error-message" id="emailError"></div>
+                                            </div>
+                                            <div class="form-group">
+                                                <input type="password" name="password" placeholder="Enter Password">
+                                                <i class="fas fa-eye toggle-password"></i>
+                                            </div>
+                                            <div class="form-group">
+                                                <div class="error-message" id="passwordError"></div>
+                                            </div>
+                                            <div class="login_footer form-group">
+                                                <div class="chek-form">
+                                                    <div class="custome-checkbox">
+                                                        <input class="form-check-input" type="checkbox" name="checkbox"
+                                                            id="exampleCheckbox1" checked="">
+                                                        <label class="form-check-label"
+                                                            for="exampleCheckbox1"><span>Remember me</span></label>
+                                                    </div>
+                                                </div>
+                                                <a class="text-muted" href="/forgotPassword">Forgot password?</a>
+                                            </div>
+                                            <div class="form-group text-center">
+                                                <button type="submit"
+                                                    class="btn btn-fill-out btn-block hover-up rounded-pill"
+                                                    name="login">
+                                                    Log in <i class="fas fa-sign-in-alt"></i>
+                                                </button>
+                                            </div>
+                                        </form>
+                                        <div class="divider-text-center mt-15 mb-15">
+                                            <span> or</span>
+                                        </div>
+                                        <ul class="btn-login list_none text-center mb-15">
+                                            <li>
+                                                <a href="#"
+                                                    class="btn btn-facebook hover-up mb-lg-3 mb-sm-4 rounded-pill">
+                                                    Sign in With <i class="fab fa-facebook-f"></i>
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="/google" class="btn btn-google hover-up rounded-pill">
+                                                    Sign in With <i class="fab fa-google"></i>
+                                                </a>
+                                            </li>
+                                        </ul>
+                                        <div class="text-muted text-center">Create account? <a href="/Register">Sign
+                                                up now</a></div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- Image Column -->
+                            <div class="col-lg-6 col-md-6 col-sm-12  d-flex align-items-center justify-content-center">
+                                <img src="/imgs/pages/loginPage.png" alt="loginImg" class="img-fluid">
+                            </div>
+                        </div>
+                    </div>
+                </section>
+
+
+            </main>
+            <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js"
+                integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8=" crossorigin="anonymous"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.7/axios.min.js"
+                integrity="sha512-NQfB/bDaB8kaSXF8E77JjhHG5PM6XVRxvHzkZiwl3ddWCEPBa23T76MuWSwAJdMGJnmQqM0VeY9kFszsrBEFrQ=="
+                crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+            <!-- Include SweetAlert -->
+            <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+            <script src="/js/loginForm.js"></script>
+
+
+            <%- include('../layouts/footer.ejs') %>
                 <%- include('../layouts/script.ejs') %>
